# pijersi-rs

./: .gitattributes  .gitignore  1.txt  2.txt  COPYRIGHT.md  Cargo.toml  README.md  UGI.md  flamegraph.sh  install-hooks.sh  perf.sh  update-openings.sh
.github/workflows/: pijersi-rs-cd.yml  pijersi-rs-ci-cd.yml  pijersi-rs-ci.yml  rs-ci.yml
benches/: benchmark.rs
data/: RELEASE_NOTES.md  openings  openings.txt
data/doc/: perftsplit_1_startpos.txt  perftsplit_2_startpos.txt
hooks/: post-checkout  pre-commit  pre-push
scripts/: generate_blocker_masks.py  generate_magic.rs  generate_neighbours1.py  generate_neighbours2.py  generate_zobrist.py  piece_to_index.py
src/: bitboard.rs  board.rs  errors.rs  game.rs  hash.rs  lib.rs  logic.rs  lookup.rs  main.rs  piece.rs  search.rs  tests.rs  ugi.rs  utils.rs
src/hash/: lookup.rs  position.rs  search.rs
src/logic/: actions.rs  index.rs  lookup.rs  movegen.rs  perft.rs  rules.rs  translate.rs
src/search/: alphabeta.rs  eval.rs  lookup.rs  openings.rs
tests/: test_perft.rs
tests/hash/: main.rs  position.rs
tests/logic/: actions.rs  main.rs  movegen.rs  perft.rs  rules.rs  translate.rs
